# nuclear_reactor_control_room

./: .gitignore  .readme  CLAUDE.md  HANDOFF.md  LICENSE  MANIFEST.in  Package.swift  README.md  RECAP.md  decay_heat.py  perf.py  physics_engine.py  physics_engine_bwr.py  physics_engine_rbm.py  physics_engine_rbmk.py  planering.md  plant_supervisor.py  pyproject.toml  run_control_room.py  validation.py
.github/workflows/: build-macos.yml  ci.yml  swift.yml
Sources/ReactorSim/: ContentView.swift  ReactorSimApp.swift
Sources/ReactorSim/Physics/: AxialCore.swift  Containment.swift  DecayHeat.swift  PWRPlant.swift  PlantParams.swift  PlantSupervisor.swift  PointKinetics.swift  ThermalHydraulics.swift  TurbineGenerator.swift  XenonIodine.swift
Sources/ReactorSim/UI/: AlarmsTab.swift  Console.swift  HeaderBar.swift  ICTab.swift  PrimaryTab.swift  ReactivityTab.swift  SecondaryTab.swift  SettingsView.swift  SoundEngine.swift  StartMenu.swift  SystemBar.swift  TabBar.swift  Theme.swift
Sources/ReactorSim/UI/Consoles/: BenchboardConsole.swift  CoreMapView.swift  DashboardConsole.swift  MalfunctionMenu.swift  MimicConsole.swift  MimicDiagram.swift  (+3 more)
Tests/ReactorSimTests/: AxialCoreTests.swift  ContainmentTests.swift  MalfunctionTests.swift  PhysicsTests.swift  StationPowerTests.swift
calibration/: README.md  aggregate.py  calibration.json  pincell.py  rodcurve.py
calibration/results/: pincell.json  rodcurve.json
data/: benchmark_envelopes.json  reference_transients.json
docs/: DEMO.md  model_limits_and_vv.md  training_sim_upgrade_spec.md
scripts/: make-app.sh
(+6 files in other folders)
